--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   </div>
   <script src="js/lib/angular.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/controllers/appCtrl.js"></script>
 </body>
 </html>
