--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>TASK</title>
-  <meta name="description" content="Angular Single page application" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
-  <link rel="shortcut icon" href="" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body ng-app="myApp">
-  <div ng-controller="appCtrl">
-    <div ng-view></div>
-    <script type="text/ng-template" id="question.html">
-      <p ng-bind="name"></p>
-    </script>
-    <script type="text/ng-template" id="result.html">
-      <p ng-bind="name"></p>
-    </script>
-  </div>
-  <script src="js/vendor/angular.min.js"></script>
-  <script src="js/vendor/angular-route.min.js"></script>
-  <script src="js/app.js"></script>
-    <script src="js/services/service.js"></script>
-  <script src="js/controllers/appCtrl.js"></script>
-  <script src="js/controllers/quizCtrl.js"></script>
-  <script src="js/controllers/resultCtrl.js"></script>
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>TASK</title>
+      <meta name="description" content="Angular Single page application" />
+      <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
+      <link rel="shortcut icon" href="" type="image/x-icon" />
+      <link rel="stylesheet" type="text/css" href="css/styles.css">
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+   </head>
+   <body ng-app="myApp">
+      <div ng-controller="appCtrl">
+         <div ng-view></div>
+      </div>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/materialize.min.js"></script>
+      <script src="js/vendor/angular.min.js"></script>
+      <script src="js/vendor/angular-route.min.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/services/service.js"></script>
+      <script src="js/controllers/appCtrl.js"></script>
+      <script src="js/controllers/quizCtrl.js"></script>
+      <script src="js/controllers/resultCtrl.js"></script>
+      <script src="node_modules/chart.js/dist/Chart.min.js"></script>
+      <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+      <script>
+      </script>
+   </body>
 </html>
