Changed chart.js path

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <script src="js/controllers/appCtrl.js"></script>
       <script src="js/controllers/quizCtrl.js"></script>
       <script src="js/controllers/resultCtrl.js"></script>
-      <!-- <script src="node_modules/chart.js/dist/Chart.min.js"></script>
-      // <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script> -->
+      <script src="js/Chart.js"></script>
+      <script src="js/angular-chart.min.js"></script>
       <script>
       </script>
    </body>
