--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>TASK</title>
+      <base href="/angular-quiz/" />
       <meta name="description" content="Angular Single page application" />
       <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
       <link rel="shortcut icon" href="" type="image/x-icon" />
